// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AudioVolume /> snapshots should render component 1`] = `
<div
  className="mfui-audio-volume"
>
  <div
    className="mfui-audio-volume__icon-area"
  >
    <test-file-stub
      className="mfui-audio-volume__icon mfui-audio-volume__icon_visible"
    />
    <test-file-stub
      className="mfui-audio-volume__icon"
    />
  </div>
  <Tooltip
    classes={
      Object {
        "content": "mfui-audio-volume__tooltip-content",
        "contentShadow": "mfui-audio-volume__tooltip-content-shadow",
      }
    }
    paddings="none"
    placement="top"
    triggerElement={
      Object {
        "current": null,
      }
    }
    triggerEvent="click"
  >
    <AudioRange
      className="mfui-audio-volume__range"
      colorPercent={30}
      maxValue="1"
      onChange={[Function]}
      step="0.01"
      value={0.3}
    />
  </Tooltip>
</div>
`;

exports[`<AudioVolume /> snapshots should render component when trackVolume to 0 1`] = `
<div
  className="mfui-audio-volume"
>
  <div
    className="mfui-audio-volume__icon-area"
  >
    <test-file-stub
      className="mfui-audio-volume__icon"
    />
    <test-file-stub
      className="mfui-audio-volume__icon mfui-audio-volume__icon_visible"
    />
  </div>
  <Tooltip
    classes={
      Object {
        "content": "mfui-audio-volume__tooltip-content",
        "contentShadow": "mfui-audio-volume__tooltip-content-shadow",
      }
    }
    paddings="none"
    placement="top"
    triggerElement={
      Object {
        "current": null,
      }
    }
    triggerEvent="click"
  >
    <AudioRange
      className="mfui-audio-volume__range"
      colorPercent={0}
      maxValue="1"
      onChange={[Function]}
      step="0.01"
      value={0}
    />
  </Tooltip>
</div>
`;
